Changed: Updated fr-ca language pack Changed: Fixed Dictionary preview on IE7 being too wide for the popup window. Changed: Removed auto_logon from logon_get_cookies() function.

--- a/forum/forums/default/start_main.css
+++ b/forum/forums/default/start_main.css
@@ -851,6 +851,7 @@ a {
 .dictionary_pretty_content {
     height: 200px;
     overflow: auto;
+    width: 385px;
 }
 
 .dictionary_word_display {
